force-app/main/default/objects/Prospect_Stage__c/Prospect_Stage__c.object-meta.xml
<CustomObject>
    <label>Prospect Stage</label>
    <nameField>
        <displayFormat>PRS-{0000000}</displayFormat>
        <label>Prospect Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospect Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>