force-app/main/default/objects/Prospect_Stage__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prospect Stages</relationshipLabel>
    <relationshipName>Prospect_Stages_Constituent</relationshipName>
    <type>Lookup</type>
</CustomField>