force-app/main/default/objects/Prospect_Stage__c/fields/Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Stage__c</fullName>
    <label>Prospect Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery/Re-engaged</fullName>
            </value>
            <value>
                <fullName>Cultivation</fullName>
            </value>
            <value>
                <fullName>Solicitation</fullName>
            </value>
            <value>
                <fullName>Stewardship-Active</fullName>
            </value>
            <value>
                <fullName>Stewardship-Long Term</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>