force-app/main/default/objects/Prospect_Stage__c/fields/Prospect_Stage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Stage_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>