force-app/main/default/objects/Prospect_Stage__c/fields/Prospect_Stage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Stage_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>